# cesium-omniverse

./: .clang-format  .clang-tidy  .cmake-format.py  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  BasicGlobeAnchor.usd  CHANGES.md  CMakeLists.txt  CMakeSettings.json  CWTAndPolygonOverlay.usda  CWTBingAndPolygonOverlay.usda  CustomCesiumMDL.usda  CustomCesiumTests.usda  README.md  ThirdParty.extra.json  ThirdParty.json  TilesetClippingDev.usda  TilesetClippingDev.withServer.usda  basicCWT.usda  clipMaterial.usda  copy-python-path-for-vs.py  cudaTestHeader.h  export_usd_tools.sh  genStubs.bat  genStubs.sh  install-debug.bat  install-relwithdebinfo.bat  multipleImageryLayersWithClip.usda  pyproject.toml  regenerate_schema.bat  regenerate_schema.py  regenerate_schema.sh
.github/: CODEOWNERS
.github/actions/: action.yml
.github/workflows/: main.yml
apps/: cesium.omniverse.app.kit  cesium.omniverse.app.python.debug.kit  cesium.omniverse.app.trace.kit  cesium.omniverse.cpp.tests.runner.kit  cesium.omniverse.dev.kit  cesium.omniverse.dev.python.debug.kit  cesium.omniverse.dev.trace.kit  cesium.omniverse.dev.trace.suite.kit  cesium.omniverse.tests.kit  cesium.performance.app.kit  cesium.performance.kit  omni.app.base.kit
cesium-kit-exts/: .editorconfig  .gitignore  README.md
cesium-kit-exts/exts/cesium.omniverse/: extension.toml
cesium-omniverse/: .cmake-format.py  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ThirdParty.json  install-relwithdebinfo.bat  install.bat  plugInfo.json
cesium-omniverse/cmake/: AddConanDependencies.cmake  CompilerToolFinder.cmake  FindNVidiaUSD.cmake  FindOmniverseClient.cmake  FindOmniverseConnectSample.cmake  GenerateCoverage.cmake  Macros.cmake
cesium-omniverse/scripts/: clang_format.py  generate_third_party_license_json.py  vscode_build.py
cesium-omniverse/src/: CMakeLists.txt  CesiumOmniverse.cpp  Georeference.cpp  Georeference.h  Globals.cpp  GltfToUSD.cpp  GltfToUSD.h  HttpAssetAccessor.cpp  InMemoryAssetResolver.cpp  InMemoryAssetResolver.h  LoggerSink.cpp  OmniTileset.cpp  OmniTileset.h  PythonBindings.cpp  RenderResourcesPreparer.cpp  RenderResourcesPreparer.h  SharedLibraryMain.cpp  TaskProcessor.cpp  UtilMacros.h  pyboost11.h
cesium-omniverse/src/bindings/: CMakeLists.txt  PythonBindings.cpp
cesium-omniverse/src/core/: CMakeLists.txt
cesium-omniverse/src/public/: CesiumOmniverse.cpp
cesium-omniverse/tests/: CMakeLists.txt  CesiumOmniverseTest.cpp
cesiumOmniverseCppTestsExtension/: CMakeLists.txt
cesiumOmniverseCppTestsExtension/bindings/: CMakeLists.txt  PythonBindings.cpp
cesiumOmniverseCppTestsExtension/include/: CesiumOmniverseCppTests.h  UsdUtilTests.h
cesiumOmniverseCppTestsExtension/public/: CMakeLists.txt  CesiumOmniverseCppTests.cpp  UsdUtilTests.cpp
cesiumTestsExtension/bindings/: CMakeLists.txt  PythonBindings.cpp
cesiumTestsExtension/include/: CesiumTests.h
cesiumTestsExtension/public/: CMakeLists.txt  CesiumTests.cpp
cmake/: AddConanDependencies.cmake  ConfigureConan.cmake  Documentation.cmake  GenerateCoverage.cmake  InstallHooks.cmake  Linters.cmake  Macros.cmake  conan-0.17.0.cmake
docker/: AlmaLinux8.Dockerfile  CI.Dockerfile  CentOS7.Dockerfile  Ubuntu22.Dockerfile
docs/: README.md
docs/building/: building.md  building_usd_on_ubuntu2204.md
docs/connectors/: README.md  sketchup_connector.adoc
docs/connectors/sketchup/: README.md
docs/developer-setup/: README.md
docs/kit/: programmatically_changing_settings.md
docs/onboarding/: README.md
docs/release-guide/: README.md  push-docker-image.md
docs/testing-guide/: README.md
exts/cesium.omniverse/: premake5.lua
exts/cesium.omniverse.cpp.tests/config/: extension.toml
exts/cesium.omniverse.cpp.tests/doc/: README.md
exts/cesium.omniverse.tests/config/: extension.toml
exts/cesium.omniverse/config/: extension.toml
exts/cesium.omniverse/doc/: README.md
exts/cesium.omniverse/mdl/: cesium.mdl
exts/cesium.omniverse/schemas/: cesium_schemas.usda
exts/cesium.powertools/config/: extension.toml
exts/cesium.powertools/doc/: README.md
exts/cesium.tests/config/: extension.toml
exts/cesium.tests/doc/: README.md
exts/cesium.usd.plugins/: premake5.lua
exts/cesium.usd.plugins/config/: extension.toml
exts/cesium.usd.plugins/doc/: CHANGES.md  README.md
exts/cesium.usd.plugins/schemas/: cesium_schemas.usda
include/cesium/omniverse/: CesiumOmniverse.h
pointCloudData/: pump0.head100.pts  simpleTest.pts
scripts/: build_package_almalinux8.sh  build_package_centos7.sh  build_package_ubuntu22.sh  build_package_windows.bat  clang_format.py  clang_tidy.py  copy_from_dir.py  copy_to_exts.py  generate_coverage.sh  generate_third_party_license_json.py  interactive_python_unit_tests.bat  interactive_python_unit_tests.sh  pre-commit  run_python_unit_tests.bat  run_python_unit_tests.sh  set-python-path-for-linux.py  update_certs.py  vscode_build.py  vscode_build_launcher.bat
scripts/utils/: utils.py
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  PythonBindings.cpp  pyboost11.h
src/core/: CMakeLists.txt  OmniGeoreference.cpp
src/core/src/: AssetRegistry.cpp  Broadcast.cpp  CesiumIonServerManager.cpp  CesiumIonSession.cpp  CesiumIonSessionManager.cpp  Context.cpp  CudaManager.cpp  CudaTest.cpp  FabricAsset.cpp  (+73 more)
src/plugins/: CMakeLists.txt
src/public/: CMakeLists.txt  CesiumOmniverse.cpp
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  ExampleTests.cpp  GltfTests.cpp  ObjectPoolTests.cpp  doctestMain.cpp  doctestUtils.cpp  doctestUtils.h  testUtils.cpp  testUtils.h.in
tests/bindings/: CMakeLists.txt  PythonBindings.cpp
tests/configs/: exampleConfig.yaml  gltfConfig.yaml
tests/include/: CMakeLists.txt  CesiumOmniverseCppTests.h  UsdUtilTests.h  testUtils.h  tilesetTests.h
tests/public/: CMakeLists.txt
tests/src/: CMakeLists.txt  CesiumOmniverseCppTests.cpp  ExampleTests.cpp  GltfTests.cpp  ObjectPoolTests.cpp  UsdUtilTests.cpp  testUtils.cpp  tilesetTests.cpp
vcpkg/triplets/: x64-linux-omniverse.cmake  x64-windows-omniverse-kit-debug.cmake  x64-windows-omniverse.cmake
(+357 files in other folders)
